text & shema  corrections. Inverted the numbers of the two first areas

--- a/src/pages/dei/index.astro
+++ b/src/pages/dei/index.astro
@@ -64,8 +64,17 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
                 ・女性社員がマネージャーを目指すための後押し支援<br />
                 　（各種研修、メンター制度、交流会ほか）
               </li>
-              <li>・障がい者雇用社員の活躍領域の拡大</li>
+              <li>
+                ・障がい者雇用社員の活躍領域の拡大、<br
+                />障がい者雇用社員の得意を活かして活躍できる環境の整備
+              </li>
             </ul>
+            <p class="details__text-paragraph supplement-link">
+              より詳しく知りたい方は、<a
+                href="https://www.aioinissaydowa.co.jp/sustainability/diversity/"
+                >当社のダイバーシティ推進のページ</a
+              >をご覧ください。
+            </p>
           </div>
         </div>
         <Picture
@@ -82,15 +91,19 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <div class="details__numbers-list">
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>
-              21<span>%達成</span>
+              24<span>%</span>
             </p>
-            <p class="details__numbers-item-subject">女性ライン長比率</p>
+            <p class="details__numbers-item-subject">
+              女性管理職比率<small>（2024年4月時点：20.0％）</small>
+            </p>
           </div>
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>
-              2.65<span>%達成</span>
+              2.7<span>%</span>
             </p>
-            <p class="details__numbers-item-subject">障がい者雇用率</p>
+            <p class="details__numbers-item-subject">
+              障がい者雇用率<small>（2024年4月時点：2.59％）</small>
+            </p>
           </div>
         </div>
       </div>
