--- a/src/styles/sections/areas/_details.scss
+++ b/src/styles/sections/areas/_details.scss
@@ -49,6 +49,10 @@
       width: 100%;
       margin-bottom: 3.4rem;
     }
+    a {
+      color: $color1;
+      text-decoration-line: underline;
+    }
   }
   &__text-item:not(:last-child) {
     margin-bottom: 4.8rem;
@@ -99,6 +103,12 @@
     @include sp {
       font-size: 1.4rem;
       line-height: 2.8rem; /* 200% */
+    }
+    &.supplement-link {
+      margin-top: 5.5rem;
+      @include sp {
+        margin-top: 3rem;
+      }
     }
   }
   &__text-whiteList {
@@ -227,6 +237,7 @@
       font-weight: 600;
       line-height: 1.5rem; /* 75% */
       letter-spacing: normal;
+      margin-left: 0.2em;
       @include sp {
         font-size: 1.6rem;
         line-height: 1.5rem; /* 93.75% */
@@ -258,18 +269,17 @@
   }
   &__numbers-small {
     position: absolute;
-    top: calc(100% + 0.3rem);
+    top: calc(100% + 0.5rem);
     left: 0;
     width: 100%;
     text-align: right;
     font-size: 1rem;
-
     font-weight: 400;
     line-height: 2rem; /* 200% */
     padding-right: 0.1rem;
+    line-height: 1.5;
     @include sp {
       font-size: 0.9rem;
-      line-height: 1.5;
       text-align: left;
       top: calc(100% + 0.8rem);
     }
