--- a/src/pages/humanresource-development/index.astro
+++ b/src/pages/humanresource-development/index.astro
@@ -37,9 +37,9 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
               ■社員一人ひとりの可能性を広げるための人財育成
               <span class={`category-bg ${color}`}></span>
             </h3>
-            <h4 class="details__text-subtitle">① 若手層育成プログラム（ベーシックスキルの習得）</h4>
+            <h4 class="details__text-subtitle">① 若手育成プログラム（ベーシックスキルの習得）</h4>
             <p class="details__text-paragraph">
-              当社社員として活躍し、「ＣＳＶ×ＤＸ」を推進するために必要となるスキルを、入社から3年間かけて計画的に習得していきます。
+              当社社員として活躍し、「価値創造への挑戦」に必要なスキルを、入社から3年間かけて計画的に習得していきます。
             </p>
           </div>
           <div class="details__text-item">
@@ -50,7 +50,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
             <h4 class="details__text-subtitle">②CSV×DXエキスパート（イノベーション人財）</h4>
             <p class="details__text-paragraph">
               CSV×DXエキスパートは全社員のCSV×DX取り組みのフロントランナーを担う人財（選抜型）です。その中でもイノベーション人財は、各部支店における地域社会課題を率先して解決し、「ＣＳＶ×ＤＸ」を実現に導く役割を担います。<br
-              />部支店から選抜されたイノベーション人財に対しては、専門的な知識やスキルの習得、挑戦する機会の提供を集中して行うことで、当社の成長戦略を牽引する人財を育成します。けて計画的に習得していきます。
+              />部支店から選抜されたイノベーション人財に対しては、専門的な知識やスキルの習得、挑戦する機会の提供を集中して行うことで、当社の成長戦略を牽引する人財を育成します。
             </p>
           </div>
           <div class="details__text-item">
@@ -60,7 +60,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
             </h3>
             <h4 class="details__text-subtitle">③マネジメント層強化プログラム</h4>
             <p class="details__text-paragraph">
-              メンバーが生き生きと働くための要である各職場のライン長に対して、人財育成やコミュニケーション活性化に必要となる知識やスキルを計画的に習得していきます。<br
+              メンバーがいきいきと働くための要である各職場のライン長は、人財育成やコミュニケーション活性化に必要となる知識やスキルを計画的に習得していきます。<br
               />また、外部講師によるマネジメント講演を通じて、普遍的なマネジメント手法を学びます。
             </p>
           </div>
@@ -81,7 +81,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <h3 class={`details__numbers-title category-bg ${color}`}>目指す姿</h3>
         <div class="details__numbers-list">
           <div class="details__numbers-item">
-            <p class={`details__numbers-item-people category-color ${color}`}>100<span>人</span></p>
+            <p class={`details__numbers-item-people category-color ${color}`}>100<span>％</span></p>
             <p class="details__numbers-item-subject">
               のベーシックスキル修了率を達成<small>（入社から3年目時点）</small>
             </p>
