--- a/src/pages/humanresource-management/index.astro
+++ b/src/pages/humanresource-management/index.astro
@@ -93,7 +93,8 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         </div>
         <p class="details__numbers-small">
           <small
-            >※入社10年目の在籍社員における複数部門（営業・損害サービス・本社部門）の経験率</small
+            >※入社10年目の在籍社員における複数部門（営業・損害サービス・本社部門）の経験率<br />
+            ※営業・損害サービス部門内の異なる領域への異動も対象に含みます</small
           >
         </p>
       </div>
