add some lazy loading and corrected some texts

--- a/src/components/InterviewCard.astro
+++ b/src/components/InterviewCard.astro
@@ -14,6 +14,7 @@ const interview = Astro.props.interview
       width="652"
       height="400"
       format=".png"
+      loading="lazy"
     />
     <div class="interviews__card-text">
       <p
