--- a/src/pages/humanresource-development/index.astro
+++ b/src/pages/humanresource-development/index.astro
@@ -74,6 +74,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
             height="760"
             format=".png"
             noSp={true}
+            loading="lazy"
           />
         </div>
       </div>
@@ -88,7 +89,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
           </div>
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>
-              3,000<span>人</span>
+              3,000<span>名</span>
             </p>
             <p class="details__numbers-item-subject">
               のCSV×DXエキスパート人財を育成<small
