--- a/src/sections/home/Areas.astro
+++ b/src/sections/home/Areas.astro
@@ -22,6 +22,7 @@ const homeUrl = import.meta.env.BASE_URL
           width="2117"
           height="1016"
           format=".png"
+          loading="lazy"
         />
       </div>
       <div class="areas__shema__body">
