--- a/src/sections/interview/Related.astro
+++ b/src/sections/interview/Related.astro
@@ -17,6 +17,7 @@ if (!area) throw new Error(`Area not found: ${areaTitle}`)
       width="1227"
       height="500"
       format=".png"
+      loading="lazy"
     />
     <div class="related__text">
       <h2 class="related__text-title">
