--- a/src/sections/interview/Talk.astro
+++ b/src/sections/interview/Talk.astro
@@ -33,6 +33,7 @@ const interview = Astro.props.interview
                 width="1026"
                 height="800"
                 format=".png"
+                loading="lazy"
               />
             </div>
           </div>
