--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -1,10 +1,16 @@
 ---
-const { cl, src, alt, format, width, height, noSp } = Astro.props
+const { cl, src, alt, format, width, height, noSp, loading } = Astro.props
 ---
 
 <picture class={cl}>
   {noSp ? null : <source media="(max-width: 768px)" srcset={`${src}_sp.webp`} type="image/webp" />}
   {noSp ? null : <source media="(max-width: 768px)" srcset={`${src}_sp${format}`} />}
   <source srcset={`${src}.webp`} type="image/webp" />
-  <img src={`${src}${format}`} alt={alt} width={width} height={height} />
+  <img
+    src={`${src}${format}`}
+    alt={alt}
+    width={width}
+    height={height}
+    loading={loading === 'lazy' ? 'lazy' : 'eager'}
+  />
 </picture>
