--- a/src/sections/home/Mission.astro
+++ b/src/sections/home/Mission.astro
@@ -1,12 +1,14 @@
 <section class="mission inview fadeIn">
   <div class="mission__container">
     <div class="mission__titleArea">
-      <h2 class="mission__titleArea-title">Group Mission</h2>
+      <h2 class="mission__titleArea-title">Our Mission</h2>
       <p class="mission__titleArea-copy">私たちのミッション</p>
     </div>
     <div class="mission__textArea">
       <p class="mission__textArea-text">
-        当社では、人財を最重要の経営資本と位置づけ、社員の能力開発を図り、世界トップ水準の保険・金融グループに相応しい「人財」を育成しています。加えて、社員一人ひとりがチャレンジ意欲旺盛で、誇り、やりがい、成長を実感できる環境整備にも取り組み、「CSV×DXを通じて、お客さま・地域・社会の未来を支えつづける」会社の実現と、「活力ある社会の発展と地球の健やかな未来を支える」という当社グループのミッションを実現していきます。
+        当社では、人財を最重要の経営資本と位置付け、人的資本経営に取り組んでいます。私たちは、人的資本経営の目指す姿を「Advance
+        for myself, Design the future
+        私が、つくる。新たなミライ」と定め、社員一人ひとりの成長を会社の成長につなげていくことを目指しています。具体的には、「ＣＳＶ×ＤＸ」の実践を通じて、お客さま、地域・社会の課題を解決することで、新たな信頼関係を構築していきます。その先には、「活力ある社会の発展と地球の健やかな未来を支える」という私たちのミッションの実現があると確信しています。
       </p>
     </div>
   </div>
