--- a/src/sections/home/Mission.astro
+++ b/src/sections/home/Mission.astro
@@ -8,7 +8,7 @@
       <p class="mission__textArea-text">
         当社では、人財を最重要の経営資本と位置付け、人的資本経営に取り組んでいます。私たちは、人的資本経営の目指す姿を「Advance
         for myself, Design the future
-        私が、つくる。新たなミライ」と定め、社員一人ひとりの成長を会社の成長につなげていくことを目指しています。具体的には、「ＣＳＶ×ＤＸ」の実践を通じて、お客さま、地域・社会の課題を解決することで、新たな信頼関係を構築していきます。その先には、「活力ある社会の発展と地球の健やかな未来を支える」という私たちのミッションの実現があると確信しています。
+        私が、つくる。新たなミライ」と定め、社員一人ひとりの成長を会社の成長につなげていくことを目指しています。「ＣＳＶ×ＤＸ」の実践を通じて、お客さま、地域・社会の課題を解決することで、新たな信頼関係を構築していきます。その先には、「活力ある社会の発展と地球の健やかな未来を支える」という私たちのミッションの実現があると確信しています。
       </p>
     </div>
   </div>
