fixed texts and updated astro

--- a/src/components/FixedLink.astro
+++ b/src/components/FixedLink.astro
@@ -6,7 +6,7 @@ const homeUrl = import.meta.env.BASE_URL
 ---
 
 <aside class="fixedLink">
-  <a href={`${homeUrl}interview/${interview.slug}`}>
+  <a href={`${homeUrl}interview/${interview.slug}/`}>
     <Picture
       cl="fixedLink__picture cover"
       src={`${homeUrl}assets/images/interview/${interview.slug}/fixedLink_img01`}
