--- a/src/sections/interview/Related.astro
+++ b/src/sections/interview/Related.astro
@@ -9,7 +9,7 @@ if (!area) throw new Error(`Area not found: ${areaTitle}`)
 ---
 
 <section class="related inview fadeIn">
-  <a href={`${homeUrl}${area.slug}`} class="related__container">
+  <a href={`${homeUrl}${area.slug}/`} class="related__container">
     <Picture
       cl="related__picture cover"
       src={`${homeUrl}assets/images/${area.slug}/related_img01`}
