added the message page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,3 +31,5 @@
 @import 'sections/interview/about';
 @import 'sections/interview/talk';
 @import 'sections/interview/related';
+
+@import 'sections/message/_video';
