--- a/src/pages/message/index.astro
+++ b/src/pages/message/index.astro
@@ -1,13 +1,58 @@
 ---
-import Layout from '../../layouts/Layout.astro'
+import Layout from "../../layouts/Layout.astro"
+import Hero from "../../components/Hero.astro"
+const homeUrl = import.meta.env.BASE_URL
 ---
 
 <Layout title="ダミー" description="ダミーダミーダミーダミーダミーダミー">
-  <section class="video inview fadeIn">
-    <div
-      class="video__container"
-      style="max-width: 80rem; margin: 20rem auto; background:red;height:40rem"
-    >
+
+  <Hero
+    copy="人的資本経営を目指す未来"
+    title="社長メッセージ"
+    slug="message"
+    color="color1"
+  />
+
+  <section class="video">
+    <div class="video__container">
+      <p class="video__textArea">動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。</p>
+      <div class="video__play">
+        <button class="video__btn" type="button" aria-label="play"></button>
+        <picture>
+          <img src={`${homeUrl}assets/images/message/video_img01.png`} alt="社長メッセージ動画" width="100%" height="100%">
+        </picture>
+      </div>
+    </div>
+    <div class="video__modal">
+      <div class="modal__overlay">
+        <i class="modal__closeBtn"></i>
+      </div>
+      <iframe src="https://player.vimeo.com/video/414432835?h=e65d1b4443" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
   </section>
+
 </Layout>
+
+<script>
+  import { gsap } from 'gsap'
+
+  const openButton = document.querySelector('.video__btn')
+  const closeButton = document.querySelector('.modal__overlay')
+  const modal = document.querySelector('.video__modal')
+
+  const openMenu = ()=>{
+    const tl = gsap.timeline()
+  tl
+  .set(modal,{display:"block"})
+  .to(modal,{opacity:1,duration:0.5})
+  }
+  const closeMenu = ()=>{
+    const tl = gsap.timeline()
+    tl
+    .to(modal,{opacity:0,duration:0.5})
+    .set(modal,{display:"none"})
+  }
+
+  openButton?.addEventListener('click',openMenu)
+  closeButton?.addEventListener('click',closeMenu)
+</script>
