残りの6つの領域ページを追加しました。

--- a/src/pages/health-management/index.astro
+++ b/src/pages/health-management/index.astro
@@ -34,41 +34,43 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <div class="details__text">
           <div class="details__text-item">
             <h3 class="details__text-title">
-              ①多様な価値観を受け入れる組織風土を醸成し、全社員がいきいきと働ける職場へ
+              ①社員の健康リテラシーを増進し、一人ひとりの仕事に対するパフォーマンス向上を引き出す
               <span class={`category-bg ${color}`}></span>
             </h3>
             <ul class="details__text-list">
               <li>
-                ●一人ひとりが、アンコンシャスバイアスや、DE&Iの意義・重要性を“自分ごと”として理解し、思いっきりチャレンジできる風土醸成に取り組みます。
+                ●衛生委員会、各種セミナー、研修開催により健康保持・増進に関する学びの機会をつくり、社員の健康 リテラシーを向上します。
               </li>
-            </ul>
-            <ul class="details__text-whiteList">
-              <li>- DE&I推進について、職場で意見を交わし、 アクション&チェンジができる場の設定</li>
-              <li>- 全国の社員同士がつながる交流の場づくり</li>
-              <li>- レインボー月間などを活用したLGBTQの理解浸透</li>
+              <li>
+                ●生活習慣病改善予防対策として、楽しみながら健康づくりができる健康サポートアプリを導入し、社員の健康づくりを後押しします。
+              </li>
+              <li>
+                ●健康な体づくりに資する運動習慣を身に付けるための運動機能のチェックや社内イベントを実施します。
+              </li>
+              <li>
+                ●健康増進に取り組むいきいきと働く社員を紹介します。
+              </li>
             </ul>
           </div>
           <div class="details__text-item">
             <h3 class="details__text-title">
-              ②意思決定層の多様化・多様な社員の活躍で、価値観の融合を、組織力につなげる
+              ②健康や安全を保持・増進し、いきいきと働ける職場環境の整備
               <span class={`category-bg ${color}`}></span>
             </h3>
             <ul class="details__text-list">
               <li>
-                ●社員一人ひとりが持つ能力を最大限発揮するため、それぞれの強みや特性を認め、違いを活かすことで
-                組織を活性化します。
+                ●自然災害発生時等の非常時を含めた、それそれの環境に応じて社員の健康管理を柔軟に実施できる体制をつくります。
+              </li>
+              <li>
+                ●健診データ等を利活用しながら、休務者発生を防止する対策の検討・実施を行います。
+              </li>
+              <li>
+                ●社内外メンタル相談窓口を積極的に案内・活用を促し、不安を抱える社員をサポートします。
+              </li>
+              <li>
+                ●全社員へストレスチェックの実施を通じて各職場の状況を分析し、いきいきと働ける職場づくりを支援します。
               </li>
             </ul>
-            <ul class="details__text-whiteList">
-              <li>- 女性社員がマネージャーを目指すための後押し支援（各種研修、メンター制度、交流会ほか）</li>
-              <li>- 障がい者雇用社員の活躍領域の拡大、障がい者雇用社員の得意を活かして活躍できる環境の整備</li>
-            </ul>
-            <p class="details__text-paragraph supplement-link">
-              より詳しく知りたい方は、<a
-                href="https://www.aioinissaydowa.co.jp/sustainability/diversity/"
-                >当社のダイバーシティ推進のページ</a
-              >をご覧ください。
-            </p>
           </div>
         </div>
         <Picture
@@ -80,23 +82,23 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
           format=".png"
         />
       </div>
-      <div class="details__numbers">
+      <div class="details__numbers custom-layout">
         <h3 class={`details__numbers-title category-bg ${color}`}>目指す姿</h3>
         <div class="details__numbers-list">
           <div class="details__numbers-item">
-            <p class={`details__numbers-item-people category-color ${color}`}>
-              24<span>%</span>
+            <p class={`details__numbers-item-people item-textOnly category-color ${color}`}>
+              前年同水準以上
             </p>
             <p class="details__numbers-item-subject">
-              女性管理職比率<small>（2024年4月時点：20.0％）</small>
+              エンゲージメント指標<sup>※1</sup>
             </p>
           </div>
           <div class="details__numbers-item">
             <p class={`details__numbers-item-people category-color ${color}`}>
-              2.7<span>%</span>
+              30<span class="item-textSmall">%以上</span>
             </p>
             <p class="details__numbers-item-subject">
-              障がい者雇用率<small>（2024年4月時点：2.58％）</small>
+              運動習慣者比率<sup>※2</sup>
             </p>
           </div>
         </div>
