--- a/src/pages/hiring-retention/index.astro
+++ b/src/pages/hiring-retention/index.astro
@@ -34,41 +34,31 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <div class="details__text">
           <div class="details__text-item">
             <h3 class="details__text-title">
-              ①多様な価値観を受け入れる組織風土を醸成し、全社員がいきいきと働ける職場へ
+              ①当社社員の人的なネットワークを活用した安定的な採用
               <span class={`category-bg ${color}`}></span>
             </h3>
             <ul class="details__text-list">
               <li>
-                ●一人ひとりが、アンコンシャスバイアスや、DE&Iの意義・重要性を“自分ごと”として理解し、思いっきりチャレンジできる風土醸成に取り組みます。
+                ●インターンシップ等を通じ当社理解を深めた学生を採用をすることで入社後の活躍とリテンション向上を図ります。
               </li>
-            </ul>
-            <ul class="details__text-whiteList">
-              <li>- DE&I推進について、職場で意見を交わし、 アクション&チェンジができる場の設定</li>
-              <li>- 全国の社員同士がつながる交流の場づくり</li>
-              <li>- レインボー月間などを活用したLGBTQの理解浸透</li>
+              <li>
+                ●多様な人財確保にむけて、社員の人的ネットワークや採用イベント等を活用したリファラル採用を強化します。
+              </li>
+              <li>
+                ●新たな価値創造にむけ、社外経験・スキルを還元することで退職者社員を対象とするアルムナイ採用を強化します。
+              </li>
             </ul>
           </div>
           <div class="details__text-item">
             <h3 class="details__text-title">
-              ②意思決定層の多様化・多様な社員の活躍で、価値観の融合を、組織力につなげる
+              ②専門領域を担える多様な人財の採用
               <span class={`category-bg ${color}`}></span>
             </h3>
             <ul class="details__text-list">
               <li>
-                ●社員一人ひとりが持つ能力を最大限発揮するため、それぞれの強みや特性を認め、違いを活かすことで
-                組織を活性化します。
+                ●専門性の高い、I T、デジタル、資産運用、グローバル人財等の採用にむけて、産学連携先とのつながりを強化します。
               </li>
             </ul>
-            <ul class="details__text-whiteList">
-              <li>- 女性社員がマネージャーを目指すための後押し支援（各種研修、メンター制度、交流会ほか）</li>
-              <li>- 障がい者雇用社員の活躍領域の拡大、障がい者雇用社員の得意を活かして活躍できる環境の整備</li>
-            </ul>
-            <p class="details__text-paragraph supplement-link">
-              より詳しく知りたい方は、<a
-                href="https://www.aioinissaydowa.co.jp/sustainability/diversity/"
-                >当社のダイバーシティ推進のページ</a
-              >をご覧ください。
-            </p>
           </div>
         </div>
         <Picture
@@ -84,19 +74,15 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
         <h3 class={`details__numbers-title category-bg ${color}`}>目指す姿</h3>
         <div class="details__numbers-list">
           <div class="details__numbers-item">
-            <p class={`details__numbers-item-people category-color ${color}`}>
-              24<span>%</span>
-            </p>
+            <p class={`details__numbers-item-people category-color ${color}`}>30<span>名</span></p>
             <p class="details__numbers-item-subject">
-              女性管理職比率<small>（2024年4月時点：20.0％）</small>
+              の専門性の高い人財を採用
             </p>
           </div>
           <div class="details__numbers-item">
-            <p class={`details__numbers-item-people category-color ${color}`}>
-              2.7<span>%</span>
-            </p>
+            <p class={`details__numbers-item-people category-color ${color}`}>30<span>名</span></p>
             <p class="details__numbers-item-subject">
-              障がい者雇用率<small>（2024年4月時点：2.58％）</small>
+              の自社ネットワーク採用
             </p>
           </div>
         </div>
