--- a/src/styles/sections/areas/_introduction.scss
+++ b/src/styles/sections/areas/_introduction.scss
@@ -1,4 +1,6 @@
 .introduction {
+  max-width: 105.8rem;
+  margin: 0 auto;
   text-align: center;
   padding: 12.7rem 0 8.5rem;
   @include sp {
@@ -11,9 +13,11 @@
     font-weight: 600;
     line-height: 4.4rem; /* 146.667% */
     letter-spacing: 0.03rem;
+    white-space: pre-line;
     @include sp {
       font-size: 2.4rem;
       line-height: 3.6rem; /* 150% */
+      white-space: normal;
     }
   }
   &__copy {
