--- a/src/styles/sections/message/_video.scss
+++ b/src/styles/sections/message/_video.scss
@@ -37,18 +37,14 @@
             height: 5rem;
         }
     }
-    &__btn::after {
-        content: '';
+    &__btn img {
         position: absolute;
         transform: translate(-50%,-50%); //要素の中央位置をセンターに設定
         top: 50%; //Y軸
         left: 55%; //X軸
         width: 3rem;
-        height: 3.3462rem;
-        background: url(/public/assets/images/message/video_icon.svg) no-repeat 100%;
         @include sp {
             width: 1.5rem;
-            height: 1.6731rem;
         }
     }
     &__btn:hover {
