一部のデザイン追加反映

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -43,4 +43,7 @@ const homeUrl = import.meta.env.BASE_URL
   <li class="navigation-item">
     <a href={`${homeUrl}interview/`} class="navigation-link">社員紹介</a>
   </li>
+  <li class="navigation-item">
+    <a href={`${homeUrl}message/`} class="navigation-link">トップメッセージ</a>
+  </li>
 </ul>
