--- a/src/styles/sections/areas/_details.scss
+++ b/src/styles/sections/areas/_details.scss
@@ -280,6 +280,10 @@
       margin: 1.2rem 0 -0.3rem;
     }
   }
+  .details__numbers-smallIndent {
+    padding-left: 2rem;
+    // text-indent: -1rem;
+  }
 }
 
 // このページの独自レイアウト
@@ -302,9 +306,6 @@
         margin-left: 0.2em;
         line-height: 1.2;
         align-self: flex-end;
-        // @include sp {
-        //   margin-bottom: 0.8rem;
-        // }
       }
       small {
         display: flex;
