--- a/src/styles/sections/areas/_figure.scss
+++ b/src/styles/sections/areas/_figure.scss
@@ -11,29 +11,136 @@
       padding: 0 0 0 2rem;
     }
   }
+  &__inner {
+    @include sp {
+      width: 32.7rem;
+      padding-left: 0;
+    }
+  }
   &__title {
+    display: flex;
     font-size: 2.4rem;
     font-style: normal;
     font-weight: 600;
-    line-height: 3.8rem; /* 158.333% */
-    margin-bottom: 2rem;
+    line-height: 3rem;
+    margin-bottom: 3.2rem;
     @include sp {
       font-size: 2rem;
       line-height: 1.5;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.6rem;
+    }
+    img {
+      padding-right: 0.8rem;
     }
   }
-  // &__text {
-  //   font-size: 1.6rem;
-  //   font-style: normal;
-  //   font-weight: 400;
-  //   line-height: 3.8rem; /* 237.5% */
-  //   margin-bottom: 2.4rem;
-  // }
   &__picture {
     @include sp {
       width: 71.7rem;
       display: block;
+    }
+  }
+  &__text {
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.8rem; /* 237.5% */
+    a {
+      color: $color1;
+      text-decoration-line: underline;
+    }
+  }
+  &__text-small {
+    margin-top: 1.6rem;
+    font-size: 1rem;
+    @include sp {
+      margin-top: 1rem;
+    }
+  }
+  &__box {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5.6rem;
+    @include sp {
+      display: block;
+      margin-top: 4rem;
+    }
+  }
+  &__box-left {
+    max-width: 50.2rem;
+    margin-bottom: 5.6rem;
+    @include sp {
+      margin-bottom: 3.2rem;
+    }
+  }
+  &__box-right {
+    img {
+      max-width: 50.2rem;
+      @include sp {
+        width: 100%;
+      }
+    }
+  }
+  &__box-list {
+    margin-bottom: 5.6rem;
+    font-size: 1.4rem;
+    line-height: 2.6rem; /* 185.714% */
+    @include sp {
+      margin-bottom: 4rem;
+    }
+    dt {
+      display: block;
+      font-weight: 600;
+    }
+    dd {
+      margin-bottom: 3.2rem;
+      font-weight: 400;
+      @include sp {
+        margin-bottom: 2rem;
+      }
+    }
+  }
+  &__box-subtitle {
+    position: relative;
+    padding-bottom: 1.6rem;
+    margin-bottom: 2.4rem;
+    font-size: 2rem;
+    font-weight: 600;
+    border-bottom: 0.2rem solid #d1dfdf;
+    @include sp {
+      font-size: 1.8rem;
+      line-height: 2.4rem; /* 133.333% */
+      padding-bottom: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    span {
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: -0.2rem;
+      width: 4rem;
+      height: 0.2rem;
+    }
+  }
+  &__linebox {
+    display: flex;
+    padding: 4rem 6.4rem;
+    margin-bottom: 3.2rem;
+    border: 1px solid #E8E8E8;
+    @include sp {
+      display: block;
+      margin-bottom: 2rem;
+      padding: 3rem 2rem;
+    }
+    p {
+      margin-bottom: 4.8rem;
+    }
+    img {
+      max-width: 18rem;
+      height: 100%;
+      margin-left: 7.8rem;
+      @include sp {
+        margin: 0 auto;
+      }
     }
   }
 }
