デザイン追加修正

--- a/src/pages/health-management/index.astro
+++ b/src/pages/health-management/index.astro
@@ -128,6 +128,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
           経済産業省と日本健康会議が主催する健康経営優良法人認定制度において、「健康経営優良法人・大規模法人部門」に2017年度より認定されており、2022年度以降は上位500社以内企業である「健康経営優良法人（大規模法人部門＜ホワイト500＞）」に認定されています。<br />本制度は特に優良な健康経営を実践している大企業や中小企業等の法人を顕彰するもので、健康経営に取り組む法人を「見える化」し、ステークホルダーから社会的な評価を受けられる環境を整備することを目的としています。
         </p>
         <Picture
+            cl="figure__health-logo"
             src={`${homeUrl}assets/images/health-management/figure_img01`}
             alt="健康経営優良法人2024 Health and productivity ホワイト500 ロゴ"
             width="180"
@@ -137,7 +138,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
           />
       </div>
       <p class="figure__text">
-        健康経営戦略マップやその他当社の体制などの詳細は<a href="#">こちら</a>でもご紹介しています。
+        健康経営戦略マップやその他当社の体制などの詳細は<a href="https://www.aioinissaydowa.co.jp/sustainability/health_productivity/">こちら</a>でもご紹介しています。
       </p>
     </div>
   </section>
