--- a/src/styles/sections/areas/_figure.scss
+++ b/src/styles/sections/areas/_figure.scss
@@ -131,16 +131,28 @@
       margin-bottom: 2rem;
       padding: 3rem 2rem;
     }
-    p {
-      margin-bottom: 4.8rem;
-    }
-    img {
-      max-width: 18rem;
-      height: 100%;
-      margin-left: 7.8rem;
+    .figure__text {
+      max-width: 67.2rem;
+      margin-right: 7.8rem; 
       @include sp {
-        margin: 0 auto;
+        width: 100%;
+        margin: 0 0 4.5rem 0;
       }
     }
+    img {
+      @include sp {
+        width: 18rem;
+        margin: 0 auto 1rem;
+      }
+    }
+  }
+  &__health-logo {
+    width: 18rem;
+    flex-shrink: 0;
+  }
+}
+.figure:last-child {
+  @include sp {
+    padding-bottom: 0;
   }
 }
