--- a/src/styles/sections/message/_video.scss
+++ b/src/styles/sections/message/_video.scss
@@ -53,8 +53,8 @@
 
     //----- モーダル -----//
     &__modal {
-         display: none;
-         opacity: 0;
+        display: none;
+        opacity: 0;
         position: fixed;
         top: 0;
         left: 0;
@@ -69,14 +69,16 @@
             position: relative;
             width: 100%;
             height: 100%;
-            cursor: help;
         }
         .modal__closeBtn {
             content: '';
             position: absolute;
             z-index: 11;
-            width: 24px;
-	        height: 24px;
+            width: 40px;
+	        height: 40px;
+            top: 12%;
+            right: 10%;
+            cursor: pointer;
         }
         .modal__closeBtn::before,
         .modal__closeBtn::after {
@@ -85,7 +87,7 @@
             top: 50%;
             left: 50%;
             width: 1px; //棒の幅（太さ）
-            height: 30px; //棒の高さ
+            height: 50px; //棒の高さ
             background: #fff;
         }
         .modal__closeBtn::before {
