--- a/src/pages/health-management/index.astro
+++ b/src/pages/health-management/index.astro
@@ -39,7 +39,8 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
             </h3>
             <ul class="details__text-list">
               <li>
-                ●衛生委員会、各種セミナー、研修開催により健康保持・増進に関する学びの機会をつくり、社員の健康 リテラシーを向上します。
+                ●衛生委員会、各種セミナー、研修開催により健康保持・増進に関する学びの機会をつくり、社員の健康
+                リテラシーを向上します。
               </li>
               <li>
                 ●生活習慣病改善予防対策として、楽しみながら健康づくりができる健康サポートアプリを導入し、社員の健康づくりを後押しします。
@@ -47,9 +48,7 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
               <li>
                 ●健康な体づくりに資する運動習慣を身に付けるための運動機能のチェックや社内イベントを実施します。
               </li>
-              <li>
-                ●健康増進に取り組むいきいきと働く社員を紹介します。
-              </li>
+              <li>●健康増進に取り組むいきいきと働く社員を紹介します。</li>
             </ul>
           </div>
           <div class="details__text-item">
@@ -119,26 +118,26 @@ const color = area.category === '人財の強化' ? 'category1' : 'category2'
 
   <section class="figure">
     <div class="figure__container figure__inner">
-      <h2 class="figure__title">
-        <img src={`${homeUrl}assets/images/common/sub-title-line.svg`} alt="縦線" width="6" height="22">
-        健康経営優良法人（大規模法人部門＜ホワイト500＞）の継続認証
-      </h2>
+      <h2 class="figure__title">健康経営優良法人（大規模法人部門＜ホワイト500＞）の継続認証</h2>
       <div class="figure__linebox">
         <p class="figure__text">
-          経済産業省と日本健康会議が主催する健康経営優良法人認定制度において、「健康経営優良法人・大規模法人部門」に2017年度より認定されており、2022年度以降は上位500社以内企業である「健康経営優良法人（大規模法人部門＜ホワイト500＞）」に認定されています。<br />本制度は特に優良な健康経営を実践している大企業や中小企業等の法人を顕彰するもので、健康経営に取り組む法人を「見える化」し、ステークホルダーから社会的な評価を受けられる環境を整備することを目的としています。
+          経済産業省と日本健康会議が主催する健康経営優良法人認定制度において、「健康経営優良法人・大規模法人部門」に2017年度より認定されており、2022年度以降は上位500社以内企業である「健康経営優良法人（大規模法人部門＜ホワイト500＞）」に認定されています。<br
+          />本制度は特に優良な健康経営を実践している大企業や中小企業等の法人を顕彰するもので、健康経営に取り組む法人を「見える化」し、ステークホルダーから社会的な評価を受けられる環境を整備することを目的としています。
         </p>
         <Picture
-            cl="figure__health-logo"
-            src={`${homeUrl}assets/images/health-management/figure_img01`}
-            alt="健康経営優良法人2024 Health and productivity ホワイト500 ロゴ"
-            width="180"
-            height="160"
-            format=".png"
-            noSp={true}
-          />
+          cl="figure__health-logo"
+          src={`${homeUrl}assets/images/health-management/figure_img01`}
+          alt="健康経営優良法人2024 Health and productivity ホワイト500 ロゴ"
+          width="180"
+          height="160"
+          format=".png"
+          noSp={true}
+        />
       </div>
       <p class="figure__text">
-        健康経営戦略マップやその他当社の体制などの詳細は<a href="https://www.aioinissaydowa.co.jp/sustainability/health_productivity/">こちら</a>でもご紹介しています。
+        健康経営戦略マップやその他当社の体制などの詳細は<a
+          href="https://www.aioinissaydowa.co.jp/sustainability/health_productivity/">こちら</a
+        >でもご紹介しています。
       </p>
     </div>
   </section>
