--- a/src/pages/message/index.astro
+++ b/src/pages/message/index.astro
@@ -1,25 +1,32 @@
 ---
-import Layout from "../../layouts/Layout.astro"
-import Hero from "../../components/Hero.astro"
-import Picture from "../../components/Picture.astro"
+import Layout from '../../layouts/Layout.astro'
+import Hero from '../../components/Hero.astro'
+import Picture from '../../components/Picture.astro'
 const homeUrl = import.meta.env.BASE_URL
 ---
 
 <Layout title="ダミー" description="ダミーダミーダミーダミーダミーダミー">
-
   <Hero
     copy="人的資本経営を目指す未来"
-    title="社長メッセージ"
+    title="トップメッセージ"
     slug="message"
     color="color1"
+    small="（人事担当役員）"
   />
 
   <section class="video inview fadeIn">
     <div class="video__container">
-      <p class="video__textArea">動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。</p>
+      <p class="video__textArea">
+        動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。動画についての概要テキストが入ります。
+      </p>
       <div class="video__play">
         <button class="video__btn" type="button" aria-label="play">
-          <img src={`${homeUrl}assets/images/message/video_icon.svg`} alt="矢印" width="30" height="33">
+          <img
+            src={`${homeUrl}assets/images/message/video_icon.svg`}
+            alt="矢印"
+            width="30"
+            height="33"
+          />
         </button>
         <Picture
           src={`${homeUrl}assets/images/message/video_img01`}
@@ -35,10 +42,15 @@ const homeUrl = import.meta.env.BASE_URL
       <div class="modal__overlay">
         <i class="modal__closeBtn"></i>
       </div>
-      <iframe src="https://player.vimeo.com/video/258181502?h=bd0ca6e02e&autoplay=1&title=0&byline=0&portrait=0" width="100%" height="100%" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <iframe
+        src="https://player.vimeo.com/video/258181502?h=bd0ca6e02e&autoplay=1&title=0&byline=0&portrait=0"
+        width="100%"
+        height="100%"
+        frameborder="0"
+        allow="fullscreen; picture-in-picture"
+        allowfullscreen></iframe>
     </div>
   </section>
-
 </Layout>
 
 <script>
@@ -48,19 +60,15 @@ const homeUrl = import.meta.env.BASE_URL
   const closeButton = document.querySelector('.modal__overlay')
   const modal = document.querySelector('.video__modal')
 
-  const openMenu = ()=>{
+  const openMenu = () => {
     const tl = gsap.timeline()
-  tl
-  .set(modal,{display:"block"})
-  .to(modal,{opacity:1,duration:0.5})
+    tl.set(modal, { display: 'block' }).to(modal, { opacity: 1, duration: 0.5 })
   }
-  const closeMenu = ()=>{
+  const closeMenu = () => {
     const tl = gsap.timeline()
-    tl
-    .to(modal,{opacity:0,duration:0.5})
-    .set(modal,{display:"none"})
+    tl.to(modal, { opacity: 0, duration: 0.5 }).set(modal, { display: 'none' })
   }
 
-  openButton?.addEventListener('click',openMenu)
-  closeButton?.addEventListener('click',closeMenu)
+  openButton?.addEventListener('click', openMenu)
+  closeButton?.addEventListener('click', closeMenu)
 </script>
