--- a/src/styles/sections/areas/_details.scss
+++ b/src/styles/sections/areas/_details.scss
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 .details {
   width: 105.8rem;
   margin: auto;
@@ -209,7 +205,7 @@ html {
       padding: 1.6rem 0 1.8rem;
     }
     &:first-child::after {
-      content: "";
+      content: '';
       position: absolute;
       top: 50%;
       right: 0;
@@ -288,9 +284,57 @@ html {
     padding-left: 2rem;
     // text-indent: -1rem;
   }
+  // in humanresource-development
+  &__anchorlink {
+    margin-top: 2.4rem;
+    a {
+      display: block;
+      width: 100%;
+      padding: 1.6rem 2.8rem 1.8rem;
+      color: #fff;
+      font-size: 1.5rem;
+      font-weight: 600;
+      background-color: #006c60;
+      border-radius: 5.4rem;
+      text-decoration: none;
+      position: relative;
+      @include sp {
+        padding: 1rem 2.4rem 1.2rem;
+        font-size: 1.4rem;
+        line-height: 1.8rem;
+      }
+      span {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 3.7rem;
+        height: 3.7rem;
+        border-radius: 50%;
+        background-color: #fff;
+      }
+      svg {
+        width: 100%;
+        transform: rotate(180deg);
+        fill: #006c60;
+        transition: all 0.3s;
+      }
+    }
+    a:hover {
+      svg {
+        transform: translateY(15%) rotate(180deg);
+        @include sp {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  }
 }
 
-// このページの独自レイアウト
+// このページの独自レイアウト workstylereform
 .custom-layout {
   .details {
     &__numbers-item-people {
@@ -335,53 +379,6 @@ html {
         margin-left: 2rem;
         span {
           white-space: nowrap;
-        }
-      }
-    }
-    &__anchorlink {
-      margin-top: 2.4rem;
-      a {
-        display: block;
-        width: 100%;
-        padding: 1.6rem 2.8rem 1.8rem;
-        color: #fff;
-        font-size: 1.5rem;
-        font-weight: 600;
-        background-color: #006c60;
-        border-radius: 5.4rem;
-        text-decoration: none;
-        position: relative;
-        @include sp {
-          padding: 1rem 2.4rem 1.2rem;
-          font-size: 1.4rem;
-          line-height: 1.8rem;
-        }
-        span {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          right: 1rem;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 3.7rem;
-          height: 3.7rem;
-          border-radius: 50%;
-          background-color: #fff;
-        }
-        svg {
-          width: 100%;
-          transform: rotate(180deg);
-          fill: #006c60;
-          transition: all .3s;
-        }
-      }
-      a:hover {
-        svg {
-          transform: translateY(15%) rotate(180deg);
-          @include sp {
-            transform: rotate(180deg);
-          }
         }
       }
     }
