--- a/src/styles/sections/areas/_figure.scss
+++ b/src/styles/sections/areas/_figure.scss
@@ -18,19 +18,39 @@
     }
   }
   &__title {
-    display: flex;
     font-size: 2.4rem;
     font-style: normal;
     font-weight: 600;
     line-height: 3rem;
     margin-bottom: 3.2rem;
+    position: relative;
+    padding-left: 1.5rem;
     @include sp {
       font-size: 2rem;
       line-height: 1.5;
       margin-bottom: 1.6rem;
     }
-    img {
-      padding-right: 0.8rem;
+    &::after,
+    &::before {
+      content: '';
+      display: block;
+      width: 0.5rem;
+      height: 2.2rem;
+      background-color: $color1;
+      position: absolute;
+      top: 55%;
+      transform: translateY(-50%);
+      @include sp {
+        height: 100%;
+      }
+    }
+    &::after {
+      width: 0.4rem;
+      left: 0;
+    }
+    &::before {
+      width: 1px;
+      left: 0.5rem;
     }
   }
   &__picture {
@@ -125,7 +145,7 @@
     display: flex;
     padding: 4rem 6.4rem;
     margin-bottom: 3.2rem;
-    border: 1px solid #E8E8E8;
+    border: 1px solid #e8e8e8;
     @include sp {
       display: block;
       margin-bottom: 2rem;
@@ -133,7 +153,7 @@
     }
     .figure__text {
       max-width: 67.2rem;
-      margin-right: 7.8rem; 
+      margin-right: 7.8rem;
       @include sp {
         width: 100%;
         margin: 0 0 4.5rem 0;
