--- a/src/styles/sections/message/_video.scss
+++ b/src/styles/sections/message/_video.scss
@@ -1,109 +1,117 @@
 .video {
-    &__container {
-        max-width: 105.8rem;
-        margin: auto;
-        @include sp {
-            max-width: 32.7rem;
-        }
+  &__container {
+    max-width: 105.8rem;
+    margin: auto;
+    @include sp {
+      max-width: 32.7rem;
     }
-    &__textArea {
-        padding: 14rem 0 10rem;
-        font-size: 1.6rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 3.2rem; /* 200% */
-        @include sp {
-            padding: 7.2rem 0 4.8rem;
-        }
+  }
+  &__textArea {
+    padding: 14rem 0 10rem;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 3.2rem; /* 200% */
+    @include sp {
+      padding: 7.2rem 0 4.8rem;
+    }
+  }
+
+  //----- 動画再生前 -----//
+  &__play {
+    position: relative;
+    width: 100%;
+  }
+  &__btn {
+    position: absolute;
+    transform: translate(-50%, -50%); //要素の中央位置をセンターに設定
+    top: 50%;
+    left: 50%;
+    width: 11rem;
+    height: 11rem;
+    border-radius: 11rem;
+    background: linear-gradient(180deg, #00cad6 0%, #0076b8 100%);
+    transition: all 0.2s ease;
+    @include sp {
+      max-width: 5rem;
+      height: 5rem;
+    }
+  }
+  &__btn img {
+    position: absolute;
+    transform: translate(-50%, -50%); //要素の中央位置をセンターに設定
+    top: 50%; //Y軸
+    left: 55%; //X軸
+    width: 3rem;
+    @include sp {
+      width: 1.5rem;
+    }
+  }
+  &__btn:hover {
+    transform: translate(-50%, -50%) scale(1.15);
+  }
+
+  //----- モーダル -----//
+  &__modal {
+    display: none;
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 12;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, 0.8);
+    overflow: auto;
+
+    .modal__overlay {
+      content: '';
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    .modal__closeBtn {
+      content: '';
+      position: absolute;
+      z-index: 11;
+      width: 40px;
+      height: 40px;
+      top: 12%;
+      right: 10%;
+      cursor: pointer;
+      @include sp {
+        top: 3rem;
+        right: 3rem;
+      }
+    }
+    .modal__closeBtn::before,
+    .modal__closeBtn::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 1px; //棒の幅（太さ）
+      height: 50px; //棒の高さ
+      background: #fff;
+    }
+    .modal__closeBtn::before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+    .modal__closeBtn::after {
+      transform: translate(-50%, -50%) rotate(-45deg);
     }
 
-    //----- 動画再生前 -----//
-    &__play {
-        position: relative;
-        width: 100%;
+    iframe {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      top: 50%;
+      left: 50%;
+      width: 116.6rem;
+      height: 65rem;
+      @include sp {
+        width: 90%;
+        height: 19rem;
+      }
     }
-    &__btn {
-        position: absolute;
-        transform: translate(-50%,-50%); //要素の中央位置をセンターに設定
-        top: 50%;
-        left: 50%;
-        width: 11rem;
-        height: 11rem;
-        border-radius: 11rem;
-        background: linear-gradient(180deg, #00CAD6 0%, #0076B8 100%);
-        transition: all 0.2s ease;
-        @include sp {
-            max-width: 5rem;
-            height: 5rem;
-        }
-    }
-    &__btn img {
-        position: absolute;
-        transform: translate(-50%,-50%); //要素の中央位置をセンターに設定
-        top: 50%; //Y軸
-        left: 55%; //X軸
-        width: 3rem;
-        @include sp {
-            width: 1.5rem;
-        }
-    }
-    &__btn:hover {
-        transform: translate(-50%,-50%) scale(1.15);
-    }
-
-    //----- モーダル -----//
-    &__modal {
-        display: none;
-        opacity: 0;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(#000, 0.8);
-        overflow: auto;
-
-        .modal__overlay {
-            content: '';
-            position: relative;
-            width: 100%;
-            height: 100%;
-        }
-        .modal__closeBtn {
-            content: '';
-            position: absolute;
-            z-index: 11;
-            width: 40px;
-	        height: 40px;
-            top: 12%;
-            right: 10%;
-            cursor: pointer;
-        }
-        .modal__closeBtn::before,
-        .modal__closeBtn::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 1px; //棒の幅（太さ）
-            height: 50px; //棒の高さ
-            background: #fff;
-        }
-        .modal__closeBtn::before {
-            transform: translate(-50%,-50%) rotate(45deg);
-        }
-        .modal__closeBtn::after {
-            transform: translate(-50%,-50%) rotate(-45deg);
-        }
-
-        iframe {
-            position: absolute;
-            transform: translate(-50%,-50%);
-            top: 50%;
-            left: 50%;
-            width: 116.6rem;
-            height: 65.5875rem;
-        }
-    }
+  }
 }
